<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gray"
    android:elevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/min_margin">

        <com.mark.alphavantage.widgets.StockDataView
            android:id="@+id/timeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/time" />

        <com.mark.alphavantage.widgets.StockDataView
            android:id="@+id/openTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/open" />

        <com.mark.alphavantage.widgets.StockDataView
            android:id="@+id/closeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/close" />

        <com.mark.alphavantage.widgets.StockDataView
            android:id="@+id/highTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/high" />

        <com.mark.alphavantage.widgets.StockDataView
            android:id="@+id/lowTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/low" />

        <com.mark.alphavantage.widgets.StockDataView
            android:id="@+id/volumeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title_text="@string/volume" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>